Modified read.md file and fixed side nav button bug of not showing pointer

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -15,3 +15,6 @@
     z-index: 10;
     display: block;
 }
+.clickable {
+    cursor: pointer;
+}
